Added next and previous buttons. They work once, as the variables saves only the next, and previous song from the first time that a song is clicked. Looking for a fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MusicPlayer</string>
+    <string name="Prev"><![CDATA[<-]]></string>
+    <string name="Next"><![CDATA[->]]></string>
 </resources>
